Change head model color to darker gray

--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
 
         function createHeadModel() {
             const headMaterial = new THREE.MeshBasicMaterial({
-                color: 0xd3d3d3, // Light gray for the wireframe
+                color: 0x888888, // Darker gray for the wireframe
                 wireframe: true,
                 transparent: true,
                 opacity: 0.3 // Make it translucent
